[gd_scene load_steps=3 format=3 uid="uid://ufb1hjutfhcv"]

[ext_resource type="Script" path="res://Carpeta Cartas/Escena Selección/Panel.gd" id="1_83018"]
[ext_resource type="Script" path="res://Carpeta Cartas/Escena Selección/Eleccion_carta.gd" id="1_fqvd7"]

[node name="EleccionCarta" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_fqvd7")

[node name="Contenedor" type="GridContainer" parent="."]
custom_minimum_size = Vector2(150.76, 103.56)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -54.5
offset_right = 118.76
offset_bottom = 49.06
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Panel1" type="Panel" parent="Contenedor"]
self_modulate = Color(1, 1, 1, 0)
light_mask = 16
visibility_layer = 16
custom_minimum_size = Vector2(26.09, 37.95)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_83018")
metadata/_edit_group_ = true

[node name="Panel2" type="Panel" parent="Contenedor"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(26.09, 37.95)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_83018")
metadata/_edit_group_ = true

[node name="Panel3" type="Panel" parent="Contenedor"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(26.09, 37.95)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_83018")
metadata/_edit_group_ = true

[node name="Panel4" type="Panel" parent="Contenedor"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(26.09, 37.95)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_83018")
metadata/_edit_group_ = true

[node name="Panel5" type="Panel" parent="Contenedor"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(26.09, 37.95)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_83018")
metadata/_edit_group_ = true

[node name="Panel6" type="Panel" parent="Contenedor"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(26.09, 37.95)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_83018")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 79.0
offset_bottom = 135.0
color = Color(0.690196, 0.631373, 0.780392, 0.662745)

[node name="ContenedorTexto" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/ContenedorTexto"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 11
text = "Escoge 
2's
cartas :)"

[node name="Label2" type="Label" parent="ColorRect/ContenedorTexto"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 13
text = "Descripción
cartas"
justification_flags = 162

[connection signal="gui_input" from="Contenedor/Panel1" to="Contenedor/Panel1" method="_on_gui_input"]
[connection signal="mouse_entered" from="Contenedor/Panel1" to="Contenedor/Panel1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Contenedor/Panel1" to="Contenedor/Panel1" method="_on_mouse_exited"]
[connection signal="gui_input" from="Contenedor/Panel2" to="Contenedor/Panel2" method="_on_gui_input"]
[connection signal="mouse_entered" from="Contenedor/Panel2" to="Contenedor/Panel2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Contenedor/Panel2" to="Contenedor/Panel2" method="_on_mouse_exited"]
[connection signal="gui_input" from="Contenedor/Panel3" to="Contenedor/Panel3" method="_on_gui_input"]
[connection signal="mouse_entered" from="Contenedor/Panel3" to="Contenedor/Panel3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Contenedor/Panel3" to="Contenedor/Panel3" method="_on_mouse_exited"]
[connection signal="gui_input" from="Contenedor/Panel4" to="Contenedor/Panel4" method="_on_gui_input"]
[connection signal="mouse_entered" from="Contenedor/Panel4" to="Contenedor/Panel4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Contenedor/Panel4" to="Contenedor/Panel4" method="_on_mouse_exited"]
[connection signal="gui_input" from="Contenedor/Panel5" to="Contenedor/Panel5" method="_on_gui_input"]
[connection signal="mouse_entered" from="Contenedor/Panel5" to="Contenedor/Panel5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Contenedor/Panel5" to="Contenedor/Panel5" method="_on_mouse_exited"]
[connection signal="gui_input" from="Contenedor/Panel6" to="Contenedor/Panel6" method="_on_gui_input"]
[connection signal="mouse_entered" from="Contenedor/Panel6" to="Contenedor/Panel6" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Contenedor/Panel6" to="Contenedor/Panel6" method="_on_mouse_exited"]
